- mysql
    - support for column-level CHARACTER SET and COLLATE declarations,
      as well as ASCII, UNICODE, NATIONAL and BINARY shorthand.
-extensions
    - new association proxy implementation, implementing complete
      proxies to list, dict and set-based relation collections
    - added orderinglist, a custom list class that synchronizes an object
      attribute with that object's position in the list
    - small fix to SelectResultsExt to not bypass itself during
      select().

0.3.7
- engines
    - warnings module used for issuing warnings (instead of logging)
    - cleanup of DBAPI import strategies across all engines 
      [ticket:480]
    - refactoring of engine internals which reduces complexity,
      number of codepaths; places more state inside of ExecutionContext
      to allow more dialect control of cursor handling, result sets.
      ResultProxy totally refactored and also has two versions of
      "buffered" result sets used for different purposes.
    - server side cursor support fully functional in postgres
      [ticket:514].
    - improved framework for auto-invalidation of connections that have
      lost their underlying database, via dialect-specific detection
      of exceptions corresponding to that database's disconnect
      related error messages.  Additionally, when a "connection no 
      longer open" condition is detected, the entire connection pool 
      is discarded and replaced with a new instance.  #516
    - the dialects within sqlalchemy.databases become a setuptools
      entry points. loading the built-in database dialects works the
      same as always, but if none found will fall back to trying
      pkg_resources to load an external module [ticket:521]
    - Engine contains a "url" attribute referencing the url.URL object
      used by create_engine().
- sql:
    - keys() of result set columns are not lowercased, come back
      exactly as they're expressed in cursor.description.  note this