@@ -1,3 +1,7 @@
+- sql
+    - _Label class overrides compare_self to return its ultimate object.
+      meaning, if you say someexpr.label('foo') == 5, it produces
+      the correct "someexpr == 5".
 - mysql
     - support for column-level CHARACTER SET and COLLATE declarations,
       as well as ASCII, UNICODE, NATIONAL and BINARY shorthand.
